--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
             <a href="#" class="btn">Hire me</a>
         </div>
     </section>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </body>
 </html>
